--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-
+<div></div>
 <div>
-        </div>
- <div>
-    <div>
-        </div>
- </div>       
+  <div></div>
+</div>
+<div></div>
+<div>
+  <div></div>
+</div>
